--- a/index.html
+++ b/index.html
@@ -157,6 +157,30 @@
       .animate-pulse {
         animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
       }
+
+      /* --- Chatbot transitions --- */
+      @keyframes slide-in-bottom-right {
+        from {
+          transform: translateY(20px) translateX(20px);
+          opacity: 0;
+        }
+        to {
+          transform: translateY(0) translateX(0);
+          opacity: 1;
+        }
+      }
+
+      .animate-slide-in-bottom-right {
+        animation: slide-in-bottom-right 0.3s ease-out forwards;
+      }
+
+      @keyframes fade-out {
+          from { opacity: 1; }
+          to { opacity: 0; }
+      }
+      .animate-fade-out {
+          animation: fade-out 0.2s ease-in forwards;
+      }
     </style>
     <script type="importmap">
 {
