feat: Implement backend server for Gemini integration
Introduces a dedicated backend server using Express to securely manage API keys and handle Gemini AI interactions. This change centralizes AI logic, removes browser-side API key dependencies, and prepares for future scalability.

Key changes include:
- Setting up an Express server.
- Loading environment variables for API keys.
- Integrating the `@google/genai` library on the backend.
- Implementing a chat session management for AI interactions.
- Moving AI-related logic from frontend services to the backend.
- Updating `package.json` to reflect backend dependencies and scripts.
- Modifying `index.html` to remove browser-side polyfills and update module imports for backend dependencies.

--- a/index.html
+++ b/index.html
@@ -188,24 +188,15 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "@google/genai": "https://esm.sh/@google/genai"
+    "@google/genai": "https://esm.sh/@google/genai",
+    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
+    "express": "https://aistudiocdn.com/express@^5.1.0",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "url": "https://aistudiocdn.com/url@^0.11.4"
   }
 }
 </script>
 <script>
-  // Polyfill Node.js globals for browser compatibility. The @google/genai library,
-  // being a universal module, expects some of these to exist. This script runs
-  // before any other module to ensure the global environment is prepared.
-  if (typeof window.global === 'undefined') {
-    window.global = window;
-  }
-  if (typeof window.process === 'undefined') {
-    window.process = {};
-  }
-  if (typeof window.process.env === 'undefined') {
-    window.process.env = {};
-  }
-
   // Set theme on initial load to prevent FOUC
   if (localStorage.theme === 'light' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: light)').matches)) {
     document.documentElement.classList.remove('dark');
