--- a/index.html
+++ b/index.html
@@ -188,11 +188,7 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "@google/genai": "https://esm.sh/@google/genai",
-    "express": "https://aistudiocdn.com/express@^5.1.0",
-    "path": "https://aistudiocdn.com/path@^0.12.7",
-    "url": "https://aistudiocdn.com/url@^0.11.4",
-    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3"
+    "@google/genai": "https://esm.sh/@google/genai"
   }
 }
 </script>
