feat: Update application to v4
Updates the GhostDrop application to version 4. This includes:
- Updating the loader subtitle to reflect v4 initialization.
- Changing the header title to "GhostDrop v4".
- Modifying the chatbot's initial message and error handling text to reference v4, clarifying potential API key issues are related to deployment environment configuration.

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <circle cx="65" cy="50" r="6" fill="var(--preloader-bg)" />
         </svg>
         <div class="loader-title">GhostDrop</div>
-        <p class="loader-subtitle">Preparing your inbox...</p>
+        <p class="loader-subtitle">Initializing v4 Inbox...</p>
       </div>
     </div>
     <script type="module" src="/index.tsx"></script>
